--- a/web/index.html
+++ b/web/index.html
@@ -12,5 +12,7 @@ and open the template in the editor.
     </head>
     <body>
         <div>done by wy</div>
+        <h2>This is feature 2</h2>
     </body>
 </html>
+
